{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 296,
  "lineage": "e6ec1399-76e7-826b-5243-8a9d0c120492",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:909251725488:internet-gateway/igw-0b9902ebe94a65603",
            "id": "igw-0b9902ebe94a65603",
            "owner_id": "909251725488",
            "region": "eu-west-1",
            "tags": {
              "Name": "mlflow-igw"
            },
            "tags_all": {
              "Name": "mlflow-igw"
            },
            "vpc_id": "vpc-0ff514896db9f6734"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:909251725488:loadbalancer/app/mlops-dashboard-alb/ebb33f4aa69cc20b",
            "arn_suffix": "app/mlops-dashboard-alb/ebb33f4aa69cc20b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "mlops-dashboard-alb-1768071366.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:909251725488:loadbalancer/app/mlops-dashboard-alb/ebb33f4aa69cc20b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mlops-dashboard-alb",
            "preserve_host_header": false,
            "region": "eu-west-1",
            "security_groups": [
              "sg-00b2eea41c454beb6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09a048836ffe20ba0"
              },
              {
                "subnet_id": "subnet-0ba9269c8cb08aaf2"
              }
            ],
            "subnets": [
              "subnet-09a048836ffe20ba0",
              "subnet-0ba9269c8cb08aaf2"
            ],
            "vpc_id": "vpc-0ff514896db9f6734",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.dashboard_alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:909251725488:listener/app/mlops-dashboard-alb/ebb33f4aa69cc20b/99d839bd3a6b003b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:909251725488:targetgroup/mlops-dashboard-tg/a25f3a42391d8d27",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:909251725488:listener/app/mlops-dashboard-alb/ebb33f4aa69cc20b/99d839bd3a6b003b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:909251725488:loadbalancer/app/mlops-dashboard-alb/ebb33f4aa69cc20b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.dashboard",
            "aws_lb_target_group.dashboard",
            "aws_security_group.dashboard_alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:909251725488:targetgroup/mlops-api-tg/3ba0074108dc3fad",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:909251725488:listener-rule/app/mlops-dashboard-alb/ebb33f4aa69cc20b/99d839bd3a6b003b/ef08850a9fc4edc3",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/v1/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:909251725488:listener-rule/app/mlops-dashboard-alb/ebb33f4aa69cc20b/99d839bd3a6b003b/ef08850a9fc4edc3",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:909251725488:listener/app/mlops-dashboard-alb/ebb33f4aa69cc20b/99d839bd3a6b003b",
            "priority": 10,
            "region": "eu-west-1",
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.dashboard",
            "aws_lb_listener.dashboard",
            "aws_lb_target_group.api",
            "aws_lb_target_group.dashboard",
            "aws_security_group.dashboard_alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:909251725488:targetgroup/mlops-api-tg/3ba0074108dc3fad",
            "arn_suffix": "targetgroup/mlops-api-tg/3ba0074108dc3fad",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200-399",
                "path": "/api/v1/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 15,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:909251725488:targetgroup/mlops-api-tg/3ba0074108dc3fad",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:909251725488:loadbalancer/app/mlops-dashboard-alb/ebb33f4aa69cc20b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mlops-api-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ff514896db9f6734"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:909251725488:targetgroup/mlops-dashboard-tg/a25f3a42391d8d27",
            "arn_suffix": "targetgroup/mlops-dashboard-tg/a25f3a42391d8d27",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 15,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:909251725488:targetgroup/mlops-dashboard-tg/a25f3a42391d8d27",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:909251725488:loadbalancer/app/mlops-dashboard-alb/ebb33f4aa69cc20b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mlops-dashboard-tg",
            "port": 8501,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ff514896db9f6734"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:909251725488:route-table/rtb-0a926a8a1cd8195b0",
            "id": "rtb-0a926a8a1cd8195b0",
            "owner_id": "909251725488",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [],
            "tags": {
              "Name": "mlflow-private-rt"
            },
            "tags_all": {
              "Name": "mlflow-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff514896db9f6734"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:909251725488:route-table/rtb-0265cf81b257cfd9c",
            "id": "rtb-0265cf81b257cfd9c",
            "owner_id": "909251725488",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b9902ebe94a65603",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mlflow-public-rt"
            },
            "tags_all": {
              "Name": "mlflow-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff514896db9f6734"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a9811eeca4d79f7",
            "region": "eu-west-1",
            "route_table_id": "rtb-0a926a8a1cd8195b0",
            "subnet_id": "subnet-0f2c2f7f461b45336"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f95436b34098ac8a",
            "region": "eu-west-1",
            "route_table_id": "rtb-0a926a8a1cd8195b0",
            "subnet_id": "subnet-0594c0bbb430cf5ce"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0516df15099df49b7",
            "region": "eu-west-1",
            "route_table_id": "rtb-0265cf81b257cfd9c",
            "subnet_id": "subnet-0ba9269c8cb08aaf2"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036363e01a6321a10",
            "region": "eu-west-1",
            "route_table_id": "rtb-0265cf81b257cfd9c",
            "subnet_id": "subnet-09a048836ffe20ba0"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:909251725488:security-group/sg-00725901fb2088750",
            "description": "Allow internal access to FastAPI backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00725901fb2088750",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": null,
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "mlops-api-sg",
            "name_prefix": "",
            "owner_id": "909251725488",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ff514896db9f6734"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cloudwatch_logs_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:909251725488:security-group/sg-0d2d53d88cc25e3d4",
            "description": "Allow ECS tasks to access CloudWatch Logs endpoint on 443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2d53d88cc25e3d4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS from ECS Task Security Groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0039c7ec1394e61ee",
                  "sg-00725901fb2088750",
                  "sg-025bf20506596938b",
                  "sg-0b1c5dca882faf8a5",
                  "sg-0f7b7ca49213bcd5a"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "mlops-cloudwatch-logs-endpoint-sg",
            "name_prefix": "",
            "owner_id": "909251725488",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mlops-cloudwatch-logs-endpoint-sg"
            },
            "tags_all": {
              "Name": "mlops-cloudwatch-logs-endpoint-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff514896db9f6734"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api",
            "aws_security_group.dashboard",
            "aws_security_group.dashboard_alb",
            "aws_security_group.mlflow_sg",
            "aws_security_group.predict_sg",
            "aws_security_group.train_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:909251725488:security-group/sg-0039c7ec1394e61ee",
            "description": "Security group for Dashboard ECS service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0039c7ec1394e61ee",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALB to access dashboard on port 8501",
                "from_port": 8501,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00b2eea41c454beb6"
                ],
                "self": false,
                "to_port": 8501
              }
            ],
            "name": "mlops-dashboard-sg",
            "name_prefix": "",
            "owner_id": "909251725488",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ff514896db9f6734"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dashboard_alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dashboard_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:909251725488:security-group/sg-00b2eea41c454beb6",
            "description": "Allow HTTP access to dashboard ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b2eea41c454beb6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mlops-dashboard-alb-sg",
            "name_prefix": "",
            "owner_id": "909251725488",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ff514896db9f6734"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecr_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:909251725488:security-group/sg-091ecfa21bacabaaf",
            "description": "Allow ECS tasks in private subnets to access ECR endpoint on 443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091ecfa21bacabaaf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS from ECS Task Security Groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0039c7ec1394e61ee",
                  "sg-00725901fb2088750",
                  "sg-025bf20506596938b",
                  "sg-0b1c5dca882faf8a5",
                  "sg-0f7b7ca49213bcd5a"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "mlops-ecr-endpoint-sg",
            "name_prefix": "",
            "owner_id": "909251725488",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mlops-ecr-endpoint-sg"
            },
            "tags_all": {
              "Name": "mlops-ecr-endpoint-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff514896db9f6734"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api",
            "aws_security_group.dashboard",
            "aws_security_group.dashboard_alb",
            "aws_security_group.mlflow_sg",
            "aws_security_group.predict_sg",
            "aws_security_group.train_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:909251725488:security-group/sg-08931e786f5898d15",
            "description": "Allow NFS access for EFS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08931e786f5898d15",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "mlflow-efs-sg",
            "name_prefix": "",
            "owner_id": "909251725488",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ff514896db9f6734"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "logs_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:909251725488:security-group/sg-094e6f087b79ffee1",
            "description": "Security group for CloudWatch Logs VPC Endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094e6f087b79ffee1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ECS tasks to send logs to CloudWatch",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0039c7ec1394e61ee",
                  "sg-00725901fb2088750",
                  "sg-025bf20506596938b",
                  "sg-0b1c5dca882faf8a5",
                  "sg-0f7b7ca49213bcd5a"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "mlops-logs-endpoint-sg",
            "name_prefix": "",
            "owner_id": "909251725488",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ff514896db9f6734"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api",
            "aws_security_group.dashboard",
            "aws_security_group.dashboard_alb",
            "aws_security_group.mlflow_sg",
            "aws_security_group.predict_sg",
            "aws_security_group.train_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mlflow_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:909251725488:security-group/sg-025bf20506596938b",
            "description": "Security group for MLflow server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.10.10.0/24",
                  "10.10.11.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-025bf20506596938b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow API to access MLflow on port 5000",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00725901fb2088750"
                ],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [],
                "description": "Allow predict to access MLflow on port 5000",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b1c5dca882faf8a5"
                ],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [],
                "description": "Allow train to access MLflow on port 5000",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f7b7ca49213bcd5a"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "mlops-mlflow-sg",
            "name_prefix": "",
            "owner_id": "909251725488",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ff514896db9f6734"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "predict_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:909251725488:security-group/sg-0b1c5dca882faf8a5",
            "description": "Security group for Predict ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1c5dca882faf8a5",
            "ingress": [],
            "name": "mlops-predict-sg",
            "name_prefix": "",
            "owner_id": "909251725488",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ff514896db9f6734"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "train_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:909251725488:security-group/sg-0f7b7ca49213bcd5a",
            "description": "Security group for Train ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f7b7ca49213bcd5a",
            "ingress": [],
            "name": "mlops-train-sg",
            "name_prefix": "",
            "owner_id": "909251725488",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ff514896db9f6734"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_alb_to_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ALB to reach API ECS task on port 8000",
            "from_port": 8000,
            "id": "sgrule-1057337930",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-00725901fb2088750",
            "security_group_rule_id": "sgr-07487aacad735cfa9",
            "self": false,
            "source_security_group_id": "sg-00b2eea41c454beb6",
            "timeouts": null,
            "to_port": 8000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api",
            "aws_security_group.dashboard_alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mlflow_ingress_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow API to access MLflow on port 5000",
            "from_port": 5000,
            "id": "sgrule-197418971",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-025bf20506596938b",
            "security_group_rule_id": "sgr-02b88150da42eab3e",
            "self": false,
            "source_security_group_id": "sg-00725901fb2088750",
            "timeouts": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api",
            "aws_security_group.mlflow_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mlflow_ingress_predict",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow predict to access MLflow on port 5000",
            "from_port": 5000,
            "id": "sgrule-343629414",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-025bf20506596938b",
            "security_group_rule_id": "sgr-0edb8fcdc2e27d007",
            "self": false,
            "source_security_group_id": "sg-0b1c5dca882faf8a5",
            "timeouts": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mlflow_sg",
            "aws_security_group.predict_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mlflow_ingress_train",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow train to access MLflow on port 5000",
            "from_port": 5000,
            "id": "sgrule-1589319148",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-025bf20506596938b",
            "security_group_rule_id": "sgr-08a1de645252a3f87",
            "self": false,
            "source_security_group_id": "sg-0f7b7ca49213bcd5a",
            "timeouts": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mlflow_sg",
            "aws_security_group.train_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:909251725488:subnet/subnet-0f2c2f7f461b45336",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2c2f7f461b45336",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "909251725488",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "mlflow-private-a"
            },
            "tags_all": {
              "Name": "mlflow-private-a"
            },
            "vpc_id": "vpc-0ff514896db9f6734"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:909251725488:subnet/subnet-0594c0bbb430cf5ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0594c0bbb430cf5ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "909251725488",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "mlflow-private-b"
            },
            "tags_all": {
              "Name": "mlflow-private-b"
            },
            "vpc_id": "vpc-0ff514896db9f6734"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:909251725488:subnet/subnet-0ba9269c8cb08aaf2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba9269c8cb08aaf2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "909251725488",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "mlflow-public-a"
            },
            "tags_all": {
              "Name": "mlflow-public-a"
            },
            "vpc_id": "vpc-0ff514896db9f6734"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:909251725488:subnet/subnet-09a048836ffe20ba0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a048836ffe20ba0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "909251725488",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "mlflow-public-b"
            },
            "tags_all": {
              "Name": "mlflow-public-b"
            },
            "vpc_id": "vpc-0ff514896db9f6734"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:909251725488:vpc/vpc-0ff514896db9f6734",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-032ca84d5836ec75c",
            "default_route_table_id": "rtb-06db6eb9aaab0b10d",
            "default_security_group_id": "sg-0a8593c4c24788ec0",
            "dhcp_options_id": "dopt-0bc9313258154d032",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ff514896db9f6734",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06db6eb9aaab0b10d",
            "owner_id": "909251725488",
            "region": "eu-west-1",
            "tags": {
              "Name": "mlflow-vpc"
            },
            "tags_all": {
              "Name": "mlflow-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudwatch_logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:909251725488:vpc-endpoint/vpce-0705fb27569b9741d",
            "dns_entry": [
              {
                "dns_name": "vpce-0705fb27569b9741d-5h927088.logs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0705fb27569b9741d-5h927088-eu-west-1b.logs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0705fb27569b9741d-5h927088-eu-west-1a.logs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "logs.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z08841411TKCRDGPJ70U1"
              },
              {
                "dns_name": "logs.eu-west-1.api.aws",
                "hosted_zone_id": "Z01687152VFYL8FEP339G"
              },
              {
                "dns_name": "streaming-logs.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z0044518XXT38AWNF6O6"
              },
              {
                "dns_name": "streaming-logs.eu-west-1.api.aws",
                "hosted_zone_id": "Z0048612POAXVSM5CUVF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0705fb27569b9741d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00a3f3861ddc226e7",
              "eni-07ae8db40ba083a43"
            ],
            "owner_id": "909251725488",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d2d53d88cc25e3d4"
            ],
            "service_name": "com.amazonaws.eu-west-1.logs",
            "service_region": "eu-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.1.205",
                "subnet_id": "subnet-0ba9269c8cb08aaf2"
              },
              {
                "ipv4": "10.10.2.101",
                "subnet_id": "subnet-09a048836ffe20ba0"
              }
            ],
            "subnet_ids": [
              "subnet-09a048836ffe20ba0",
              "subnet-0ba9269c8cb08aaf2"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ff514896db9f6734"
          },
          "dependencies": [
            "aws_security_group.api",
            "aws_security_group.cloudwatch_logs_endpoint_sg",
            "aws_security_group.dashboard",
            "aws_security_group.dashboard_alb",
            "aws_security_group.mlflow_sg",
            "aws_security_group.predict_sg",
            "aws_security_group.train_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:909251725488:vpc-endpoint/vpce-036494213d109422f",
            "dns_entry": [
              {
                "dns_name": "vpce-036494213d109422f-5m7hb6yr.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-036494213d109422f-5m7hb6yr-eu-west-1b.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-036494213d109422f-5m7hb6yr-eu-west-1a.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "api.ecr.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z08646563CN88P3TAKF1S"
              },
              {
                "dns_name": "ecr.eu-west-1.api.aws",
                "hosted_zone_id": "Z0447287C1464R9WTN5Q"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-036494213d109422f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-069a7561871a0ae58",
              "eni-0bdba0a0434c85036"
            ],
            "owner_id": "909251725488",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-091ecfa21bacabaaf"
            ],
            "service_name": "com.amazonaws.eu-west-1.ecr.api",
            "service_region": "eu-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.10.195",
                "subnet_id": "subnet-0f2c2f7f461b45336"
              },
              {
                "ipv4": "10.10.11.245",
                "subnet_id": "subnet-0594c0bbb430cf5ce"
              }
            ],
            "subnet_ids": [
              "subnet-0594c0bbb430cf5ce",
              "subnet-0f2c2f7f461b45336"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ff514896db9f6734"
          },
          "dependencies": [
            "aws_security_group.api",
            "aws_security_group.dashboard",
            "aws_security_group.dashboard_alb",
            "aws_security_group.ecr_endpoint_sg",
            "aws_security_group.mlflow_sg",
            "aws_security_group.predict_sg",
            "aws_security_group.train_sg",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:909251725488:vpc-endpoint/vpce-005c27b21bf218c04",
            "dns_entry": [
              {
                "dns_name": "vpce-005c27b21bf218c04-2ylfeeyq.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-005c27b21bf218c04-2ylfeeyq-eu-west-1b.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-005c27b21bf218c04-2ylfeeyq-eu-west-1a.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "dkr.ecr.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z0470565CK4ULFNR5WXN"
              },
              {
                "dns_name": "*.dkr.ecr.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z0470565CK4ULFNR5WXN"
              },
              {
                "dns_name": "dkr-ecr.eu-west-1.on.aws",
                "hosted_zone_id": "Z046932818764V6KZOCV5"
              },
              {
                "dns_name": "*.dkr-ecr.eu-west-1.on.aws",
                "hosted_zone_id": "Z046932818764V6KZOCV5"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-005c27b21bf218c04",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a0e1d07407a93869",
              "eni-0b43abd40f5a7f39c"
            ],
            "owner_id": "909251725488",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-091ecfa21bacabaaf"
            ],
            "service_name": "com.amazonaws.eu-west-1.ecr.dkr",
            "service_region": "eu-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.10.9",
                "subnet_id": "subnet-0f2c2f7f461b45336"
              },
              {
                "ipv4": "10.10.11.151",
                "subnet_id": "subnet-0594c0bbb430cf5ce"
              }
            ],
            "subnet_ids": [
              "subnet-0594c0bbb430cf5ce",
              "subnet-0f2c2f7f461b45336"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ff514896db9f6734"
          },
          "dependencies": [
            "aws_security_group.api",
            "aws_security_group.dashboard",
            "aws_security_group.dashboard_alb",
            "aws_security_group.ecr_endpoint_sg",
            "aws_security_group.mlflow_sg",
            "aws_security_group.predict_sg",
            "aws_security_group.train_sg",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:909251725488:vpc-endpoint/vpce-0cd25dbd418d6a709",
            "cidr_blocks": [
              "3.5.64.0/21",
              "3.5.72.0/23",
              "52.92.0.0/17",
              "52.218.0.0/17"
            ],
            "id": "vpce-0cd25dbd418d6a709",
            "owner_id": "909251725488",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6da54004",
            "private_dns_enabled": false,
            "region": "eu-west-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0a926a8a1cd8195b0"
            ],
            "service_name": "com.amazonaws.eu-west-1.s3",
            "service_region": "eu-west-1",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0ff514896db9f6734"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}